# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import visitorsRouter from "./visitors";
 import businessesRouter from "./businesses";
 import stampsRouter from "./stamps";
+import applicationsRouter from "./applications";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(visitorsRouter);
 router.use(businessesRouter);
 router.use(stampsRouter);
+router.use(applicationsRouter);
 
 export default router;
