# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./visitors";
 export * from "./businesses";
 export * from "./stamps";
+export * from "./applications";
